--- a/desktop-integration/pdfshrink.desktop
+++ b/desktop-integration/pdfshrink.desktop
@@ -5,5 +5,6 @@ Terminal=true
 Hidden=false
 Name=PDF-Shrink
 Exec=pdfshrink %F
+TryExec=pdfshrink
 MimeType=application/pdf
-Icon=evince
+Icon=applications-engineering
