--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,14 @@
 [bdist_wheel]
-# This flag says that the code is written to work on both Python 2 and Python
-# 3. If at all possible, it is good practice to do this. If you cannot, you
-# will need to generate wheels for each Python version that you support.
-universal=1
+universal = true
+
+[metadata]
+license_file = LICENSE
+
+[flake8]
+# B = bugbear
+# E = pycodestyle errors
+# F = flake8 pyflakes
+# W = pycodestyle warnings
+# B9 = bugbear opinions
+select = B, E, F, W, C90
+max-line-length = 95
