--- a/desktop-integration/pdfslim.desktop
+++ b/desktop-integration/pdfslim.desktop
@@ -4,7 +4,7 @@ Type=Application
 Terminal=true
 Hidden=false
 Name=PDF-Shrink
-Exec=pdfshrink %F
-TryExec=pdfshrink
+Exec=pdfslim %F
+TryExec=pdfslim
 MimeType=application/pdf;
 Icon=applications-engineering
