Fix desktop integration

--- a/desktop-integration/pdfslim.desktop
+++ b/desktop-integration/pdfslim.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Terminal=true
 Hidden=false
-Name=PDF-Shrink
+Name=PDF-Slim
 Exec=pdfslim %F
 TryExec=pdfslim
 MimeType=application/pdf;
